Fix up css for timebar and the profit history overview and the volume history overview for it to be left-aligned

--- a/src/App.css
+++ b/src/App.css
@@ -395,7 +395,6 @@ a {
   color: #F9F9F9;
   width: 12.5%;
   margin-left: 30px;
-  margin-right: 20px;
 }
 
 .asset-text-data {
@@ -870,7 +869,6 @@ a {
   display: flex;
   background: linear-gradient(119.02deg, #1E1E1E 80.59%, #000000 101.02%);
   flex-direction: row;
-  max-width: 309.36px;
   box-shadow: 0px 0px 7.887511730194092px -1.2453967332839966px #ffffff73;
   justify-content: space-between;
   padding-left: 9px;
